...
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    tools:ignore="MissingConstraints"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/activityNeighbourDetailTxtTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/fab_margin"
                    android:text="No name"
                    android:textSize="30dp"
                    android:textStyle="bold"
...
